# clsim

./: .gitignore  .mailinglist  CMakeLists.txt  FindOpenCL.cmake  MAINTAINERS  README.md  RELEASE_NOTES
private/clsim/: I3CLShim.cxx  I3CLShim.h  I3CLSimClientModule.cxx  I3CLSimEventStatistics.cxx  I3CLSimFlasherPulse.cxx  I3CLSimFunction.cxx  I3CLSimFunctionAbsLenIceCube.cxx  I3CLSimFunctionConstant.cxx  I3CLSimFunctionFromTable.cxx  I3CLSimFunctionPolynomial.cxx  I3CLSimFunctionRefIndexIceCube.cxx  I3CLSimFunctionRefIndexQuanFry.cxx  I3CLSimFunctionScatLenIceCube.cxx  I3CLSimFunctionScatLenPartic.cxx  I3CLSimHelperToFloatString.h  I3CLSimLightSource.cxx  I3CLSimLightSourceParameterization.cxx  I3CLSimLightSourcePropagatorFromI3PropagatorService.cxx  I3CLSimLightSourcePropagatorFromI3PropagatorService.h  I3CLSimLightSourceToStepConverter.cxx  I3CLSimLightSourceToStepConverterAsync.cxx  I3CLSimLightSourceToStepConverterFlasher.cxx  I3CLSimLightSourceToStepConverterPPC.cxx  I3CLSimLightSourceToStepConverterUtils.cxx  I3CLSimLightSourceToStepConverterUtils.h  I3CLSimMediumProperties.cxx  I3CLSimModule.cxx  I3CLSimModuleHelper.cxx  I3CLSimPMTPhotonSimulator.cxx  I3CLSimPMTPhotonSimulatorIceCube.cxx  I3CLSimParticleParameterization.cxx  I3CLSimParticleToStepConverter.cxx  I3CLSimParticleToStepConverterCascadeParameterization.cxx  I3CLSimParticleToStepConverterPPC.cxx  I3CLSimParticleToStepConverterUtils.cxx  I3CLSimParticleToStepConverterUtils.h  I3CLSimPhoton.cxx  I3CLSimPhotonHistory.cxx  I3CLSimPhotonSeriesToPhotonSeriesMapConverter.cxx  I3CLSimRandomValue.cxx  (+34 more)
private/geant4/: I3CLSimI3ParticleGeantConverter.hh  I3CLSimLightSourcePropagatorGeant4.cxx  I3CLSimLightSourcePropagatorGeant4.h  I3CLSimLightSourceToStepConverterGeant4.cxx  I3CLSimParticleToStepConverterGeant4.cxx  TrkCerenkov.cxx  TrkCerenkov.hh  TrkDetectorConstruction.cxx  TrkDetectorConstruction.hh  TrkEMPhysicsUHE.cxx  TrkEMPhysicsUHE.hh  TrkEnergyCut.cxx  TrkEnergyCut.hh  TrkEventAction.cxx  TrkEventAction.hh  TrkOpticalPhysics.cxx  TrkOpticalPhysics.hh  TrkPrimaryGeneratorAction.cxx  TrkPrimaryGeneratorAction.hh  TrkStackingAction.cxx  TrkStackingAction.hh  TrkUISessionToQueue.cxx  TrkUISessionToQueue.hh  TrkUserEventInformation.cxx  TrkUserEventInformation.hh
private/make_safeprimes/: convert.cxx  main.c  main.cxx
private/opencl/: I3CLSimHelperGenerateGeometrySource.cxx  I3CLSimHelperGenerateGeometrySource.h  I3CLSimHelperGenerateMediumPropertiesSource.cxx  I3CLSimHelperGenerateMediumPropertiesSource.h  I3CLSimHelperGenerateMediumPropertiesSource_Optimizers.cxx  I3CLSimHelperGenerateMediumPropertiesSource_Optimizers.h  I3CLSimHelperLoadProgramSource.h  I3CLSimHelperMath.cxx  I3CLSimHelperMath.h  I3CLSimOpenCLDevice.cxx  I3CLSimStepToPhotonConverterOpenCL.cxx  ieeehalfprecision.cxx  ieeehalfprecision.h  mwcrng_init.h
private/pybindings/: CMakeLists.txt  I3CLShim.cxx  I3CLSimEventStatistics.cxx  I3CLSimFlasherPulse.cxx  I3CLSimFunction.cxx  I3CLSimLightSource.cxx  I3CLSimLightSourceParameterization.cxx  I3CLSimLightSourcePropagator.cxx  I3CLSimLightSourcePropagatorGeant4.cxx  I3CLSimLightSourceToStepConverter.cxx  I3CLSimLightSourceToStepConverterUtils.cxx  I3CLSimMediumProperties.cxx  I3CLSimModuleHelper.cxx  I3CLSimOpenCLDevice.cxx  I3CLSimPMTPhotonSimulator.cxx  I3CLSimParticleParameterization.cxx  I3CLSimParticleToStepConverter.cxx  I3CLSimParticleToStepConverterUtils.cxx  I3CLSimPhoton.cxx  I3CLSimPhotonHistory.cxx  I3CLSimPhotonSeriesToPhotonSeriesMapConverter.cxx  I3CLSimPhotonToMCPEConverter.cxx  I3CLSimRandomValue.cxx  I3CLSimScalarField.cxx  I3CLSimSimpleGeometry.cxx  I3CLSimSpectrumTable.cxx  I3CLSimStep.cxx  I3CLSimStepToPhotonConverter.cxx  I3CLSimTabulator.cxx  I3CLSimTabulator.h  I3CLSimTester.cxx  I3CLSimVectorTransform.cxx  I3CLSimWlenDependentValue.cxx  I3CompressedPhoton.cxx  I3Converters.cxx  I3ExtraGeometryItem.cxx  I3HoleIceSimulator.cxx  I3Matrix.cxx  I3Photon.cxx  I3ShadowedPhotonRemover.cxx  (+6 more)
private/test/: I3CLSimFunctionTester.cxx  I3CLSimFunctionTester.h  I3CLSimMediumPropertiesTester.cxx  I3CLSimMediumPropertiesTester.h  I3CLSimRandomDistributionTester.cxx  I3CLSimRandomDistributionTester.h  I3CLSimScalarFieldTester.cxx  I3CLSimScalarFieldTester.h  I3CLSimTesterBase.cxx  I3CLSimTesterBase.h  I3CLSimVectorTransformTester.cxx  I3CLSimVectorTransformTester.h  I3CLSimWlenDependentValueTester.cxx  I3CLSimWlenDependentValueTester.h
public/clsim/: I3CLSimClientModule.h  I3CLSimEventStatistics.h  I3CLSimFlasherPulse.h  I3CLSimFunction.h  I3CLSimFunctionAbsLenIceCube.h  I3CLSimFunctionConstant.h  I3CLSimFunctionFromTable.h  I3CLSimFunctionPolynomial.h  I3CLSimFunctionRefIndexIceCube.h  I3CLSimFunctionRefIndexQuanFry.h  I3CLSimFunctionScatLenIceCube.h  I3CLSimFunctionScatLenPartic.h  I3CLSimLightSource.h  I3CLSimLightSourceParameterization.h  I3CLSimLightSourcePropagator.h  I3CLSimLightSourceToStepConverter.h  I3CLSimLightSourceToStepConverterAsync.h  I3CLSimLightSourceToStepConverterFlasher.h  I3CLSimLightSourceToStepConverterGeant4.h  I3CLSimLightSourceToStepConverterPPC.h  I3CLSimMediumProperties.h  I3CLSimModule.h  I3CLSimModuleHelper.h  (+49 more)
python/: AsyncTap.py  AutoSetGeant4Environment.py  FakeFlasherInfoGenerator.py  FlasherInfoVectToFlasherPulseSeriesConverter.py  Gen2Sensors.py  GetAntaresOMAcceptance.py  GetAntaresOMAngularSensitivity.py  GetDefaultParameterizationList.py  GetFlasherParameterizationList.py  GetHybridParameterizationList.py  GetIceCubeDOMAcceptance.py  GetIceCubeDOMAngularSensitivity.py  GetIceCubeFlasherSpectrum.py  GetKM3NeTDOMAcceptance.py  GetMDOMAcceptance.py  GetMDOMAngularSensitivity.py  I3CLSimModule.py  I3CLSimParticleToStepConverterGeant4MP.py  I3CLSimRandomValueIceCubeFlasherTimeProfile.py  I3FrameSplitterMerger.py  MakeAntaresMediumProperties.py  MakeIceCubeMediumProperties.py  MakeIceCubeMediumPropertiesPhotonics.py  StandardCandleFlasherPulseSeriesGenerator.py  __init__.py  traysegments.py
resources/: Icecube_geometry.20100310.complete.txt  README__put__safeprimes_base32.txt__here  download_safeprimes.sh
trunk/: CMakeLists.txt  RELEASE_NOTES
(+464 files in other folders)
